# yadro-test

./: CMakeLists.txt  README.md
src/: face_detection.cpp  smart_pointer.h
tests/: face_detection_test.cpp  smart_pointer_test.cpp
